--- a/Welcome_To_Colaboratory.ipynb
+++ b/Welcome_To_Colaboratory.ipynb
@@ -13,6 +13,8 @@
     {
       "cell_type": "code",
       "source": [
+        "\"\"\"add details : student name,semester,marks of 3 subjects \"\"\"\n",
+        "\n",
         "def add_details(n):\n",
         " fobj = open(\"details.txt\",\"a\")\n",
         " for i in range(n):\n",
